data/derived/comb/progs/unify/prog2629.ml.out
Characters 124-125:
  if (List.length s = List.length x)
                                  ^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
